--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Pagina principale</title>
+  <title>Redirect...</title>
+  <meta http-equiv="refresh" content="0; url=search_text.html" />
 </head>
 <body>
-  <h1>Benvenuto nel mio sito GitHub Pages!</h1>
-  <p>Questa è la pagina index.html di esempio.</p>
+  <p>Se non vieni reindirizzato automaticamente, <a href="search_text.html">clicca qui</a>.</p>
 </body>
 </html>
+
