--- a/search_text.html
+++ b/search_text.html
@@ -26,6 +26,7 @@
 <h2>Elenco Sedi</h2>
 
 <!-- Casella di ricerca -->
+<input type="file" id="fileInput" accept=".csv">    
 <input type="text" id="searchBox" placeholder="🔍 Cerca..." style="margin-bottom:10px; padding:5px; width:200px;">
 
 <table id="dataTable">
@@ -69,8 +70,19 @@ document.getElementById('searchBox').addEventListener('input', function () {
     document.querySelectorAll('#dataTable tbody tr').forEach(row => {
         const match = [...row.cells].some(cell => cell.textContent.toLowerCase().includes(term));
         row.style.display = match ? '' : 'none';
+        
+        const searchTerm = document.getElementById('searchBox').value.trim();
+headers.forEach(h => {
+    let td = document.createElement('td');
+    td.innerHTML = highlightMatch(row[h.toLowerCase()] || "", searchTerm);
+    tr.appendChild(td);
+});
     });
 });
+    document.getElementById('searchBox').addEventListener('input', () => {
+    currentPage = 1;
+    renderTable();
+    }
     function highlightMatch(text, term) {
     if (!term) return text;
     const regex = new RegExp(`(${term})`, 'gi');
@@ -79,4 +91,5 @@ document.getElementById('searchBox').addEventListener('input', function () {
 </script>
 </body>
 </html>
+
 
