--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Redirect...</title>
-  <meta http-equiv="refresh" content="0; url=search_text.html" />
+  <meta http-equiv="refresh" content="0; url=cerca_sedi_mb_vim.html" />
 </head>
 <body>
-  <p>Se non vieni reindirizzato automaticamente, <a href="search_text.html">clicca qui</a>.</p>
+  <p>Se non vieni reindirizzato automaticamente, <a href="cerca_sedi_mb_vim.html">clicca qui</a>.</p>
 </body>
 </html>
 
