--- a/search_text.html
+++ b/search_text.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="refresh" content="0; url=cerca_sedi_mb_vim.html" />
 <title>Elenco Sedi</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -264,3 +265,4 @@ function toggleDarkMode() {
 </script>
 </body>
 </html>
+
